[package]
name = "defmt-influx"
version = "0.1.0"
edition = "2018"
authors = ["Mia Metzler <mia@metzler.systems>"]
repository = "https://github.com/miathedev/defmt-tcp"
readme = "README.md"
description = "Pipes defmt logs received from a TCP interface  to InfluxDB"
keywords = ["cli", "embedded", "defmt"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license-file = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
thiserror = "1.0"
ctrlc = "3.1.7"
log = "0.4.14"
anyhow = "1.0.43"
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dependencies.defmt-decoder]
version = "=0.3.0"
features = ["unstable"]